<resources>
    <string name="app_name">SpinDeals</string>
    <string name="coupon_redeem">Redeem</string>
    <string name="location_service_stop">Push for stop searching</string>
    <string name="location_service_text">Search for deals in progress</string>
    <string name="fragment_companies_title">All \nPartners</string>
    <string name="fragment_active_companies_title">Active \nSpins</string>
    <string name="fragment_coupons_title">My \nCoupons</string>
    <string name="login_success_message">You succeeded login</string>
    <string name="search">Search</string>
    <string name="near_me">Near me</string>
    <string name="filters">Filters</string>
    <string name="spin_active">Active Spin</string>
    <string name="spin_is_coming">No Spin today</string>
    <string name="spin_plus">+1 Spin</string>
    <string name="e_shops">Coming Soon</string>
    <string name="all">All</string>
    <string name="food">Food</string>
    <string name="nightlife">Nightlife</string>
    <string name="coffee">Coffee</string>
    <string name="events">Specials</string>
    <string name="shops">Shopping</string>
    <string name="services">Services</string>
    <string name="favorites">Favorites</string>
    <string name="or">or</string>
    <string name="login_skip">Skip for now</string>
    <string name="login_fb_btn">Log in with <b>Facebook</b></string>
    <string name="login_google_btn">Log in with <b>Google</b></string>
    <string name="game_title">Press, hold and release SPIN button</string>
    <string name="congrats">Congrats!</string>
    <string name="rules_conditions_title">Rules &amp; Conditions</string>
    <string name="locks">Locks in:</string>
    <string name="expires">Expires in:</string>
    <string name="share_coupon">Share\ncoupon</string>
    <string name="unlock">Unlock</string>
    <string name="send_friends">Send to\nfriends</string>
    <string name="next_version">Coming soon in the next version!</string>
    <string name="login_title">Do you feel lucky today?</string>
    <string name="call">Call</string>
    <string name="news">News</string>
    <string name="directions">Directions</string>
    <string name="web">Web</string>
    <string name="about">About Spins and Coupons for this place</string>
    <string name="more_info">More info</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="out_of_spins"><b>Out of spins?</b> Get an extra spin</string>
    <string name="play">Play</string>
    <string name="gifts_info">gifts info</string>
    <string name="finish_on">Finish on %s</string>
    <string name="day">%dday</string>
    <string name="days">%ddays</string>
    <string name="time">%1$dh,%2$dm</string>
    <string name="time_short">%dm</string>
    <string name="direction_distance">Distance: %s</string>
    <string name="more_about">More\nAbout</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="important">Important!</string>
    <string name="redeem_text">Make sure you show this coupon before redeem it to the cashier</string>
    <string name="not_now">Not Now</string>
    <string name="unlock_title">Unlock</string>
    <string name="unlock_text1">You can <b>unlock</b> and <b>redeem</b> this coupon very easy</string>
    <string name="unlock_text2">Just use one of the below</string>
    <string name="unlock_text3">You can always tell your friends next to you to try their luck</string>
    <string name="unlock_text4">send you their coupons</string>
    <string name="time_left">Time left:</string>
    <string name="unlock_facebook_like">Like %s facebook page</string>
    <string name="unlock_facebook_share">Share with friends %s</string>
    <string name="unlock_invite_friends">Invite your friends</string>
    <string name="login_license">By login in or accessing SpinDeals app you agree and accept our <u>Terms &amp; Conditions</u></string>
    <string name="lose_title">You lost!</string>
    <string name="lose_text1">Not lucky enough today…</string>
    <string name="lose_text2">Don\'t give up just yet</string>
    <string name="lose_text3">Get an extra spin</string>
    <string name="extra_spin_text1">Out of spins? You can get</string>
    <string name="extra_spin_text2">an extra spin</string>
    <string name="setting_title">Menu</string>
    <string name="logout">LogOut</string>
    <string name="login">LogIn</string>
    <string name="spin_not_available">You spent your Spin for this place for now. For your next Spin see the: About Spins and Coupons for this place</string>
    <string name="extra_spin_not_available">You spent your Spin for this place for now. For your next Spin see the: About Spins and Coupons for this place</string>
    <string name="see_gifts">See gifts</string>
    <string name="my_coupons">My coupons</string>
    <string name="game_out_of_spins">Out of spins?</string>
    <string name="game_get_extra_spins">Get an extra spin</string>
    <string name="redeemed">Redeemed:</string>
    <string name="wait_for_update_data">Wait for update data</string>
    <string name="empty_category">This category is empty</string>
    <string name="spin_coming_message">No Spin today for this place. For the next Spin see the: About Spins and Coupons for this place</string>
    <string name="network_title">No connection found</string>
    <string name="network_text">Your connection to the wireless network is turned off. Restore your connection and try again.</string>
    <string name="settings">Settings</string>
    <string name="cancel">cancel</string>
    <string name="network_unavailable">Network is unavailable</string>
    <string name="please_wait">Please wait</string>
    <string name="finding_direction">Finding direction</string>
    <string name="unknown_location">Unknown your current location</string>
    <string name="near_me_category">Filter near me</string>
    <string name="near_me_title">Set radius in meters</string>
    <string name="sound_category">Sound</string>
    <string name="sound_game">Turn on/off game sound</string>
    <string name="notification_category">Notifications</string>
    <string name="notification_title">Turn on/off geo notifications</string>
    <string name="send_title">Send to friends</string>
    <string name="send_text">Send this coupon to your friends and the <b>first</b> who redeem it can have it</string>
    <string name="send_btn">Send</string>
    <string name="send_chooser_title">Send with</string>
    <string name="send_coupon_text">SpinDeals app Coupon code - Go to my Coupons tab, press the \"+\" button and add the code: %s</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="version">Version %s</string>
    <string name="partner">Partner with us</string>
    <string name="contact">Contact us</string>
    <string name="help_improve">Help our app to improve</string>
    <string name="suggestions_box">Suggestions\nbox</string>
    <string name="tutorial">Tutorial</string>
    <string name="visit_our_website">Visit our website</string>
    <string name="visit_our_facebook">Visit our Facebook page</string>
    <string name="settings_invite">Invite friends</string>
    <string name="rating_us">Rating us</string>
    <string name="mail_chooser">Send email:</string>
    <string name="filter_by_town"><u>By town</u></string>
    <string name="filter_za">Z-A</string>
    <string name="filter_apply">Apply</string>
    <string name="filter_clear">Clear</string>
    <string name="filter_close">Close</string>
    <string name="search_placeholder">Search by place name/keyword</string>
    <string name="gps_title">No Location Found</string>
    <string name="gps_text">Turn on Locations Services to allow the app to determine your location</string>
    <string name="search_empty">Your search returned no results</string>
    <string name="add_coupon_title">Add coupon</string>
    <string name="add_coupon_button">Add</string>
    <string name="add_coupon_code_wrong">Wrong coupon code</string>
    <string name="gifts_left">%d gifts left</string>
    <string name="gifts_over">Sorry, all gifts are over for now.</string>
    <string name="other_places">Other locations of this company</string>
    <string name="select_maps_app">Select your maps app</string>
    <string name="favorites_text1">Favourites still empty</string>
    <string name="favorites_text2">
        Gather here all your favourite
        \ncompanies places and shops
    </string>
    <string name="offer">Offer</string>
    <string name="filter_by_keywords"><u>Subcategories</u></string>
    <string name="cheat_message">You already used this</string>
    <string name="coming_soon_message">This category is coming soon</string>
    <string name="info_empty_message">No news at this moment</string>
    <string name="login_dialog_title">Attention</string>
    <string name="login_dialog_message">To continue need to login</string>
    <string name="ok">Ok</string>
    <string name="coupon_not_available">Coupon not available today</string>
    <string name="get_coupon_text">Only whoever redeems the coupon first will receive it.</string>
    <string name="loading">Loading…</string>
    <string name="share_app_description">SpinDeals Cyprus - Spin and Win Unique Offers and Coupons</string>
    <string name="add_coupon_text">Here you can Add the coupon code you received from your friend.</string>
    <string name="expired">Expired:</string>
    <string name="near_me_message">Searching for your location</string>
    <string name="directions_message">All over Cyprus</string>
    <string name="delete_coupon_dialog_title">Confirm</string>
    <string name="delete_coupon_dialog_message">Do you want delete this coupon?</string>
</resources>