<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/near_me_category">
        <EditTextPreference
            android:title="@string/near_me_title"
            android:key="nearMeRadius"
            android:numeric="integer"
            android:inputType="number"
            android:maxLength="9"
            android:defaultValue="15000"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/sound_category">
        <CheckBoxPreference
            android:title="@string/sound_game"
            android:defaultValue="true"
            android:key="soundGame"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/notification_category">
        <CheckBoxPreference
            android:title="@string/notification_title"
            android:defaultValue="true"
            android:key="notifications"/>
    </PreferenceCategory>
</PreferenceScreen>