<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="40dp"
    android:paddingLeft="35dp"
    android:paddingRight="35dp"
    android:paddingTop="40dp"
    android:background="@drawable/drop_shadow"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.vasilkoff.luckygame.activity.UnlockActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/coupon_top_bg">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unlock_title"
                android:textColor="@color/colorLegendTitle"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
            <ImageButton
                android:id="@+id/unlockClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cancel"
                android:background="@null"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:padding="2dp"
                android:onClick="onClickUnlock"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/line_hr"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unlock_text1"
                android:gravity="center"
                android:textColor="@color/colorLegendTitle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/unlock_text2"
                android:gravity="center"
                android:textColor="@color/colorUnlockText"/>
        </LinearLayout>
        <Button
            android:id="@+id/unlockUnlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="unlock"
            android:onClick="onClickUnlock"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unlock_text3"
                android:gravity="center"
                android:textColor="@color/colorLegendTitle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:gravity="center"
                android:textColor="@color/colorUnlockTextBlue"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unlock_text4"
                android:gravity="center"
                android:textColor="@color/colorLegendTitle"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/bg_bot"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expires"
            android:textColor="@color/colorUnlockExpired"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/unlockExpires"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:textColor="@color/colorUnlockExpired"
            android:textSize="16sp"/>

    </LinearLayout>




</LinearLayout>
