<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="64dp"
    android:background="@drawable/bg_login"
    tools:context="com.spindealsapp.activity.ChooseAccountActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorLoginText"
        android:textSize="20sp"
        android:layout_marginTop="30dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.facebook.login.widget.LoginButton
                android:id="@+id/loginFbButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <Button
                android:id="@+id/btnFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_fb"
                android:text="@string/login_fb_btn"
                android:onClick="onClickLogin"
                style="@style/LoginBtn"/>
        </FrameLayout>

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_google"
            android:onClick="onClickLogin"
            android:text="@string/login_google_btn"
            style="@style/LoginBtn"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:src="@drawable/line_login"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textColor="@color/colorLoginText"
                android:text="@string/or"
                android:gravity="center"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:src="@drawable/line_login"
                android:layout_gravity="center"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnLoginSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_skip"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:background="@null"
            android:textColor="@color/colorLoginText"
            android:padding="20dp"
            android:onClick="onClickLogin"/>
        <TextView
            android:id="@+id/chooseAccountTermsConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:paddingBottom="10dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/login_license"
            android:textColor="@color/colorLoginText"
            android:textSize="13sp"
            android:onClick="onClickLogin"/>

    </LinearLayout>


</RelativeLayout>
