<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.spindealsapp.activity.LocationActivity">
    <data>
        <variable
            name="handler"
            type="com.spindealsapp.binding.handler.NetworkHandler"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="40dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingTop="40dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@drawable/shadow_small">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/coupon_top_bg"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps_title"
                android:textColor="@color/colorLegendTitle"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gps_icon"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps_text"
                android:textSize="13sp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_bot_network">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                style="@style/NetworkButtonText"
                android:onClick="@{handler::settings}"/>
            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="@style/NetworkButtonText"
                android:onClick="@{handler::back}"/>

        </LinearLayout>


    </LinearLayout>
</layout>
