<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.spindealsapp.activity.InputCouponActivity">
    <data>
        <variable
            name="viewModel"
            type="com.spindealsapp.vmodel.InputCouponVM" />
        <import type="android.view.View" alias="v"/>
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/settingsBg1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include
                layout="@layout/header"
                app:handler="@{viewModel}"
                app:title="@{viewModel.title}"
                app:back="@{viewModel.backIcon}"
                app:colorTitle="@{viewModel.colorTitle}"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="13dp"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/add_coupon_code_wrong"
                    android:textColor="@color/wrongCode"
                    android:textStyle="bold"
                    android:visibility="@{viewModel.couponCheck ? v.GONE : v.VISIBLE}"/>
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/addCouponEdit"
                    android:textStyle="bold"
                    android:textCursorDrawable="@null"
                    android:text="@={viewModel.code}"
                    android:lines="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_coupon_button"
                    android:textSize="19sp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textColor="@color/networkButtonText"
                    android:background="@drawable/bg_btn_send"
                    android:layout_margin="10dp"
                    android:onClick="@{viewModel::add}"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:gravity="center"
                    android:text="@string/add_coupon_text"/>
            </LinearLayout>
        </RelativeLayout>
        <include
            layout="@layout/preloader"
            app:result="@{viewModel.isLoading}"/>
    </FrameLayout>
</layout>

